# valeris

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cobertura.xml  tarpaulin-report.html  test.Dockerfile  valeris.toml.example
.github/workflows/: rust.yml
bad_practice_examples/: latest
docs/: CI-CD-INTEGRATION.md  CLI.md  CONFIGURATION.md  README.md
docs/architecture/: overview.md
docs/contributing/: CONTRIBUTING.md
docs/guides/: quick-start.md
docs/rules/: dockerfile-rules.md  runtime-rules.md
examples/: bad-dockerfile  good-dockerfile
examples/configs/: README.md  ci-cd.toml  development.toml  production.toml  security-audit.toml  team-standards.toml
rules/dockerfile/: apt-cache.yaml  curl-wget.yaml  dangerous-commands.yaml  image-metadata.yaml  latest.yaml  multistage.yaml  pip-npm.yaml  security.yaml  shell-vulnerabilities.yaml  workdir-healthcheck.yaml
src/: cli.rs  config.rs  docker_aux.rs  lib.rs  main.rs  rules.rs  yaml_rules.rs
src/detectors/: docker.rs  mod.rs
src/docker/: exporters.rs  mod.rs  model.rs  printer.rs  scanner.rs
src/output/: exporters.rs  mod.rs  printer.rs
src/plugins/: mod.rs
tests/: cli.rs  cli_parser.rs  dockerfile_integration_tests.rs  run.rs  yaml_detectors.rs
tests/snapshots/: yaml_detectors__capabilities.expected.snap  yaml_detectors__capabilities.snap  yaml_detectors__exposed_ports.snap  yaml_detectors__ipc_mode.snap  yaml_detectors__mounts.snap  yaml_detectors__network_mode.snap  yaml_detectors__pid_limits.snap  yaml_detectors__pid_mode.snap  yaml_detectors__privileged_mode.snap  yaml_detectors__readonly_rootfs.snap  yaml_detectors__resoruce_cpu_limit.snap  (+7 more)
(+101 files in other folders)
