[package]
name = "valeris"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bollard = "0.18.1"
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
flate2   = "1"
colored = "3.0.0"
csv = "1.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
serde_yaml = "0.9"
dirs     = "5" 
tar      = "0.4"
jsonpath_lib = "0.3"
regex = "1"
itertools = "0.14.0"
indexmap = "2.9.0"
walkdir = "2"

[[bin]]
name = "valeris"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
walkdir  = "2"
insta       = { version = "1.38", features = ["json"] }


